tests/ui/json/json-short.rs
//~v ERROR `main` function not found in crate `json_short`
//@ compile-flags: --json=diagnostic-short --error-format=json
